--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
         applicationId "com.twittervplay"
         minSdkVersion 16
         targetSdkVersion 26
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,5 +27,11 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:multidex:1.0.1'
+    compile('com.twitter.sdk.android:twitter:3.0.0') {
+        transitive = true;
+        exclude group: 'com.zendesk', module: 'sdk-providers'
+    }
     testCompile 'junit:junit:4.12'
+    compile project(path: ':twittervideoshare')
 }
