--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
+    lintOptions {
+            abortOnError false
+    }
     defaultConfig {
         applicationId "com.twittervplay"
         minSdkVersion 16
